--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "author": "B. Troll",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "inquirer": "8.2.4"
+  },
   "bugs": {
     "url": "https://github.com/bradleytroll/employee-tracker/issues"
   },
